--- a/task_2/src/app.css
+++ b/task_2/src/app.css
@@ -34,6 +34,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: red;
 }
 
 .card {
@@ -77,4 +78,31 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.section {
+  margin: 25px;
+  padding: 15px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+.converter_result {
+  border: 2px solid burlywood;
+  box-shadow: 5px 10px 5px #9f9d9d;
+}
+
+.res {
+  color: red;
+  font-size: 25px;
+}
+
+label {
+  margin-right: 15px;
+}
+
+select, input {
+  padding: 7px;
+  border: 0.5px solid #ad9999;
+  border-radius: 5px;
 }
